--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+CritterCatcher/settings.py
 
 # Created by https://www.toptal.com/developers/gitignore/api/macos,python,django,pycharm+all,git
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,python,django,pycharm+all,git
