--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-
+CritterCatcher/settings.py
+settings.py
 
 # Created by https://www.toptal.com/developers/gitignore/api/macos,python,django,pycharm+all,git
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,python,django,pycharm+all,git
